--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,31 @@
 }
 
 
+.sfondo{
+  position: fixed; /* padre relative = body */
+  z-index: -1; /* Posiziona su livello inferiore */
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100vh;
+  background-image: url(../img/background-legno.png);
+  background-size: contain;
+  background-repeat: repeat;
+
+}
+
 /* Container del sito */
 .container{
-  width: 1200px;
+  width: 1000px;  /* Ricalco l'immagine di riferimento */
   margin: auto;
+  border: 1px solid black;
 }
 
 /* Blocco header */
 .block-header{
   background-color: yellow;
-  height: 200px;
+  margin-top:20px;
+  height: 420px;
 }
 
 /* Contenuto del sito */
@@ -28,11 +43,13 @@
   width: 100%;
   background-color: rgba(255,255,0,0.2);
   margin: 10px 0;
+  border: 1px solid orange;
+  margin-bottom:50px;
 }
 /* Sidebar a sinistra */
 .sidebar-left{
   width: 25%;
-  padding-right: 20px;
+  padding-right: 50px;
   /* height: */ Determinata dal contenuto
 
 }
@@ -40,43 +57,69 @@
 /* Blocco 1 nella sidebar a sinistra */
 .block1-sx{
   width: 100%;
-  height: 300px;
+  height: 450px;
   background-color: rgba(255,0,255,0.5);
 }
 
 /* Contenuto al centro dello schermo */
 .content-center{
   width: 50%;
-  height: 500px;
+  height: 370px;
   background-color: rgb(255,0,255);
 }
 
 .sidebar-right{
   width: 25%;
-  padding-left: 20px;
+  padding-left: 50px;
 }
 
 .block1-dx{
   width: 100%;
-  height: 200px;
-  margin-bottom: 20px; /* Solo padding inferiore */
+  height: 380px;
+  margin-bottom: 40px; /* Solo padding inferiore */
   background-color: rgba(255,0,255,0.5);
 }
 
 .block2-dx{
   width: 100%;
-  height: 200px;
+  height: 380px;
   padding-bottom: 20px; /* Solo padding inferiore */
   background-color: rgba(255,0,255,0.5);
+  margin-bottom: 40px
+}
 
+.block3-dx{
+  width: 100%;
+  height: 380px;
+  padding-bottom: 20px; /* Solo padding inferiore */
+  background-color: rgba(255,0,255,0.5);
 }
 
 
 /* Blocco footer */
 .block-footer{
   background-color: lightblue;
-  height: 100px;
+  height: 150px;
 }
+
+/* Reference img */
+.reference{
+  position: absolute; /* padre relative lo prende dal body;*/
+  z-index:0;
+  height: 1891px;
+  width: 1667px;
+  top:0;
+  left:50%;
+  transform: translate(-50%,0%);
+  opacity: 0%;
+  background-image: url(../img/reference.png);
+  border: 1px solid black;
+}
+
+.reference:hover{
+  opacity: 50%;
+}
+
 /* ======= UTILITIES =========*/
 
 /* Float sinistra e destra */
