--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/* COMPLETARE NAVBAR (Reset + altro) */
+
+
+
 /* Inizializzazione pagina */
 *{
   box-sizing: border-box;
@@ -45,12 +49,30 @@
   border-radius: 0px;
 }
 
+/* Navbar del sito */
 .header-navbar{
   width:100%;
   height:45px;
-  background-color: rgba(0,0,0,0.5);
+  background-color: #666;
   border-radius: 0px;
 }
+
+.header-navbar ul{
+  text-decoration: none;
+  width:600px;
+  margin: 0 auto;
+  font-size: 12px;
+}
+
+.header-navbar li {
+  display: inline;
+  text-decoration: none;
+  color: white;
+  line-height: 45px; /* Prendi altezza del div padre */
+  padding: 0px 10px;
+}
+
+
 
 /* Contenuto del sito */
 .content{
