--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@
   height: 380px;
   border: 10px solid white;
   background-image:url(../img/header-sfondo.png);
+  background-size: cover;
   border-radius: 0px;
 }
 
@@ -70,6 +71,13 @@
   color: white;
   line-height: 45px; /* Prendi altezza del div padre */
   padding: 0px 10px;
+}
+
+.header-navbar a {
+  /* Reset estetica link */
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 
@@ -101,6 +109,13 @@
 .block1-sx{
   width: 100%;
   height: 450px;
+}
+
+.rss-logo{
+  width: 24px;
+  height: 24px;
+  background-image: url(../img/icone/rss.png);
+  background-size: cover;
 }
 
 /* Contenuto al centro dello schermo */
@@ -138,7 +153,41 @@
 .block-footer{
   background-color: lightgrey;
   height: 150px;
+  color: #aaa;
 }
+
+.footer-firma{
+  width: 100%;
+  height:25px;
+  text-align: center;
+  border-bottom: 2px solid #aaa;
+}
+
+.footer-link-social{
+  text-align: center;
+  height: 100px;
+  margin: 0 auto;
+}
+
+.link-facebook, .link-insta, .link-gatto{
+  width: 48px;
+  height: 48px;;
+  border: 1px solid blue;
+  background-size: cover;
+}
+
+.link-facebook{
+  background-image: url(../img/icone/facebook.jpg);
+}
+
+.link-insta{
+  background-image: url(../img/icone/instagram.png);
+}
+
+.link-gatto{
+  background-image: url(../img/icone/gatto.png);
+}
+
 
 /* Reference img */
 .reference{
