--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-/* COMPLETARE NAVBAR (Reset + altro) */
+/* COMPLETARE NAVBAR (Reset + altro)
+USARE COLOR PICKER I COLORI ESATTI*/
 
 
 
@@ -60,9 +61,10 @@
 
 .header-navbar ul{
   text-decoration: none;
+  text-align: center;
   width:600px;
   margin: 0 auto;
-  font-size: 12px;
+  font-size: 11px;
 }
 
 .header-navbar li {
@@ -105,18 +107,64 @@
 
 }
 
+
+.content h1{
+  font-size: 24px;
+  color: #333;
+  text-shadow: 2px 2px rgba(66,66,66,0.1); /* le ombre della sidebar dx sono leggermente diverse */
+  margin-bottom: 30px;
+}
+
+.content p{
+  font-size: 18px;
+  line-height: 30px;
+}
+
+
+
+.content-center, .block1-dx, .block2-dx, .block3-dx{
+  padding: 20px;
+  font-weight: bold;
+}
+
+
+
+
 /* Blocco 1 nella sidebar a sinistra */
 .block1-sx{
   width: 100%;
-  height: 450px;
+  /* height: 450px; */
+  padding: 10px;
+}
+
+.block1-sx h1 {
+  font-size: 28px;
+  margin-bottom: 5px;
+}
+
+.block1-sx a {
+  text-decoration: none; /* Reset stile default link */
+  font-size: 18px;
+  display: block;
+  font-weight: bold;
+  color:green;
+  margin-bottom:15px;
+}
+
+.block1-sx a:last-child {
+  margin-bottom: 0px;
 }
 
 .rss-logo{
-  width: 24px;
-  height: 24px;
+  width: 36px;
+  height: 56px;
   background-image: url(../img/icone/rss.png);
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
+
+
+
 
 /* Contenuto al centro dello schermo */
 .content-center{
@@ -165,15 +213,20 @@
 
 .footer-link-social{
   text-align: center;
-  height: 100px;
+  height: 125px;
   margin: 0 auto;
+  border: 1px solid orange;
 }
 
 .link-facebook, .link-insta, .link-gatto{
   width: 48px;
-  height: 48px;;
+  height: 100%;
+  width: 30%;
+  display: inline-block;
   border: 1px solid blue;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .link-facebook{
@@ -204,7 +257,7 @@
 }
 
 .reference:hover{
-  opacity: 50%;
+  opacity: 100%;
 }
 
 /* ======= UTILITIES =========*/
